[project]
name = "qas"
version = "0.1.0"
description = "A question-answering system"
authors = []
dependencies = [
    "llama-index>=0.9.16.post1",
    "setuptools>=69.0.2",
    "chromadb>=0.4.21",
    "fastembed>=0.1.3",
    "typing-extensions>=4.9.0",
    "llama-hub>=0.0.65",
    "atlassian-python-api>=3.41.4",
    "sentence-transformers>=2.2.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.8.0",
]
